add_library(validator OBJECT
    ConsistencyValidator.cpp
    IdentifierConsistencyValidator.cpp
    InternalConsistencyValidator.cpp
    L1CompatibilityValidator.cpp
    L2v1CompatibilityValidator.cpp
    L2v2CompatibilityValidator.cpp
    L2v3CompatibilityValidator.cpp
    L2v4CompatibilityValidator.cpp
    L3v1CompatibilityValidator.cpp
    L3v2CompatibilityValidator.cpp
    MathMLConsistencyValidator.cpp
    ModelingPracticeValidator.cpp
    OverdeterminedValidator.cpp
    SBMLExternalValidator.cpp
    SBMLInternalValidator.cpp
    SBMLValidator.cpp
    SBOConsistencyValidator.cpp
    StrictUnitConsistencyValidator.cpp
    UnitConsistencyValidator.cpp
    VConstraint.cpp
    Validator.cpp
    constraints/ArgumentsUnitsCheck.cpp
    constraints/ArgumentsUnitsCheckWarnings.cpp
    constraints/AssignmentCycles.cpp
    constraints/AssignmentRuleOrdering.cpp
    constraints/CiElementMathCheck.cpp
    constraints/CiElementNot0DComp.cpp
    constraints/CompartmentOutsideCycles.cpp
    constraints/ConsistencyConstraints.cpp
    constraints/DuplicateTopLevelAnnotation.cpp
    constraints/EqualityArgsMathCheck.cpp
    constraints/ExponentUnitsCheck.cpp
    constraints/FunctionApplyMathCheck.cpp
    constraints/FunctionDefinitionRecursion.cpp
    constraints/FunctionDefinitionVars.cpp
    constraints/FunctionNoArgsMathCheck.cpp
    constraints/FunctionReferredToExists.cpp
    constraints/IdBase.cpp
    constraints/IdNameNewOnSBase.cpp
    constraints/IdentifierConsistencyConstraints.cpp
    constraints/InternalConsistencyConstraints.cpp
    constraints/KineticLawUnitsCheck.cpp
    constraints/KineticLawVars.cpp
    constraints/L1CompatibilityConstraints.cpp
    constraints/L2v1CompatibilityConstraints.cpp
    constraints/L2v2CompatibilityConstraints.cpp
    constraints/L2v3CompatibilityConstraints.cpp
    constraints/L2v4CompatibilityConstraints.cpp
    constraints/L3v1CompatibilityConstraints.cpp
    constraints/L3v2CompatibilityConstraints.cpp
    constraints/LambdaMathCheck.cpp
    constraints/LocalParameterMathCheck.cpp
    constraints/LocalParameterShadowsIdInModel.cpp
    constraints/LogicalArgsMathCheck.cpp
    constraints/MathMLBase.cpp
    constraints/MathMLConsistencyConstraints.cpp
    constraints/ModelUnitsDangling.cpp
    constraints/ModelingPracticeConstraints.cpp
    constraints/NumberArgsMathCheck.cpp
    constraints/NumericArgsMathCheck.cpp
    constraints/NumericReturnMathCheck.cpp
    constraints/OverDeterminedCheck.cpp
    constraints/OverdeterminedConstraints.cpp
    constraints/PieceBooleanMathCheck.cpp
    constraints/PiecewiseValueMathCheck.cpp
    constraints/PowerUnitsCheck.cpp
    constraints/RateOfAssignmentMathCheck.cpp
    constraints/RateOfCiTargetMathCheck.cpp
    constraints/RateOfCompartmentMathCheck.cpp
    constraints/RateOfCycles.cpp
    constraints/ReportEmptyListOf.cpp
    constraints/SBOConsistencyConstraints.cpp
    constraints/SpeciesReactionOrRule.cpp
    constraints/StoichiometryMathVars.cpp
    constraints/StrictUnitConsistencyConstraints.cpp
    constraints/UniqueIdBase.cpp
    constraints/UniqueIdsForUnitDefinitions.cpp
    constraints/UniqueIdsInKineticLaw.cpp
    constraints/UniqueIdsInModel.cpp
    constraints/UniqueMetaId.cpp
    constraints/UniqueSpeciesTypesInCompartment.cpp
    constraints/UniqueSymbolsInInitialAssignments.cpp
    constraints/UniqueVarsInEventAssignments.cpp
    constraints/UniqueVarsInEventsAndRules.cpp
    constraints/UniqueVarsInInitialAssignmentsAndRules.cpp
    constraints/UniqueVarsInRules.cpp
    constraints/UnitConsistencyConstraints.cpp
    constraints/UnitsBase.cpp
    constraints/ValidCnUnitsValue.cpp
)

set_target_properties(validator PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    )

target_include_directories(validator PRIVATE
    "${SRC}"
)
